Wrappers/FreeImageAlgorithmsSharp/FreeImageInterop.cs

        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetPalette")]
        internal static extern RGBQUAD[] GetPalette(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetDotsPerMeterX")]
        internal static extern uint GetDotsPerMeterX(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetDotsPerMeterY")]
        internal static extern uint GetDotsPerMeterY(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetInfoHeader")]
        [return: MarshalAs(UnmanagedType.LPStruct)]
        internal static extern BITMAPINFOHEADER GetInfoHeader(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetInfo")]
        [return: MarshalAs(UnmanagedType.LPStruct)]
        internal static extern BITMAPINFO GetInfo(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetColorType")]
        internal static extern int GetColorType(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetRedMask")]
        internal static extern uint GetRedMask(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetGreenMask")]
        internal static extern uint GetGreenMask(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetBlueMask")]
        internal static extern uint GetBlueMask(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetTransparencyCount")]
        internal static extern uint GetTransparencyCount(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetTransparencyTable")]
        internal static extern IntPtr GetTransparencyTable(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_SetTransparent")]
        internal static extern void SetTransparent(uint dib,
            [MarshalAs(UnmanagedType.Bool)] bool enabled);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_IsTransparent")]
        [return: MarshalAs(UnmanagedType.Bool)]
        internal static extern bool IsTransparent(uint dib);

        [DllImport("FreeImage.dll", EntryPoint="FreeImage_ConvertTo8Bits")]
        internal static extern uint ConvertTo8Bits(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_ConvertTo16Bits555")]
        internal static extern uint ConvertTo16Bits555(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_ConvertTo16Bits565")]
        internal static extern uint ConvertTo16Bits565(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_ConvertTo24Bits")]
        internal static extern uint ConvertTo24Bits(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_ConvertTo32Bits")]
        internal static extern uint ConvertTo32Bits(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_ConvertToStandardType")]
        internal static extern uint ConvertToStandardType(uint dib, int scale);

        [DllImport("FreeImage.dll", EntryPoint = "FreeImage_ConvertToGreyscale")]
        internal static extern uint ConvertToGreyscale(uint dib);

        [DllImport("FreeImage.dll", EntryPoint = "FreeImage_ConvertToType")]
        internal static extern uint ConvertToType(uint dib, FreeImageType type, int scale);

        [DllImport("FreeImage.dll", EntryPoint="FreeImage_ColorQuantize")]
        internal static extern uint ColorQuantize(uint dib, Quantize quantize);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_Threshold")]
        internal static extern uint Threshold(uint dib, uint t);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_Dither")]
        internal static extern uint Dither(uint dib, FI_DITHER algorithm);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_ConvertFromRawBits")]
        internal static extern uint ConvertFromRawBits(byte[] bits, int width, int height,
            int pitch, uint bpp, uint redMask, uint greenMask, uint blueMask,
            [MarshalAs(UnmanagedType.Bool)] bool topDown);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_ConvertToRawBits")]
        internal static extern void ConvertToRawBits(IntPtr bits, uint dib, int pitch,
            uint bpp, uint redMask, uint greenMask, uint blueMask,
            [MarshalAs(UnmanagedType.Bool)] bool topDown);

        [DllImport("FreeImage.dll", EntryPoint="FreeImage_RotateClassic")]
        internal static extern uint RotateClassic(uint dib, Double angle);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_RotateEx")]
        internal static extern uint RotateEx(uint dib, Double angle,
            Double xShift, Double yShift, Double xOrigin, Double yOrigin,
            [MarshalAs(UnmanagedType.Bool)] bool useMask);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_FlipHorizontal")]
        [return: MarshalAs(UnmanagedType.Bool)]
        internal static extern bool FlipHorizontal(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_FlipVertical")]
        [return: MarshalAs(UnmanagedType.Bool)]
        internal static extern bool FlipVertical(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_Rescale")]
        internal static extern uint Rescale(uint dib, int dst_width, int dst_height, Filter filter);
            
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_AdjustCurve")]
        [return: MarshalAs(UnmanagedType.Bool)]
        internal static extern bool AdjustCurve(uint dib, byte[] lut, ColourChannel channel);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_AdjustGamma")]
        [return: MarshalAs(UnmanagedType.Bool)]
        internal static extern bool AdjustGamma(uint dib, Double gamma);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_AdjustBrightness")]
        [return: MarshalAs(UnmanagedType.Bool)]
        internal static extern bool AdjustBrightness(uint dib, Double percentage);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_AdjustContrast")]
        [return: MarshalAs(UnmanagedType.Bool)]
        internal static extern bool AdjustContrast(uint dib, Double percentage);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_Invert")]
        [return: MarshalAs(UnmanagedType.Bool)]
        internal static extern bool Invert(uint dib);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetHistogram")]
        [return: MarshalAs(UnmanagedType.Bool)]
        internal static extern bool GetHistogram(uint dib, [In, Out] int[] histo, ColourChannel channel);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_GetChannel")]
        [return: MarshalAs(UnmanagedType.Bool)]
        internal static extern bool GetChannel(uint dib, ColourChannel channel);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_SetChannel")]
        [return: MarshalAs(UnmanagedType.Bool)]
        internal static extern bool SetChannel(uint dib, uint dib8, ColourChannel channel);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_Copy")]
        internal static extern uint Copy(uint dib, int left, int top, int right, int bottom);
        
        [DllImport("FreeImage.dll", EntryPoint="FreeImage_Paste")]
        [return: MarshalAs(UnmanagedType.Bool)]
        internal static extern bool Paste(uint dst, uint src, int left, int top, int alpha);
    }
}

